--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <h1>Rock Paper Scissors</h1>
 
+    <button id="Rock">Rock</button>
+    <button id="Paper">Paper</button>
+    <button id="Scissors">Scissors</button>
 
+    <div id="rounds"></div>
+
+    <div id="score">Score: You: 0 Computer: 0</div>
     
     <script src="./game.js"></script>
 </body>
