--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Rock Paper Scissors</h1>
 
+    <h2><button id="startGameButton" style="display: none">Start New Game</button></h2>
+
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</button>
     <button id="Scissors">Scissors</button>
@@ -15,6 +17,8 @@
     <div id="rounds"></div>
 
     <div id="score">Score: You: 0 Computer: 0</div>
+
+    <div id="finalscore"></div>
     
     <script src="./game.js"></script>
 </body>
