--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
+    <div class="title-container">
+     <h1 class="title">Rock Paper Scissors</h1>
+    </div>
 
-    <h2><button id="startGameButton" style="display: none">Start New Game</button></h2>
+    <button id="startGameButton" style="display: none">Start New Game</button>
 
-    <button id="Rock">Rock</button>
-    <button id="Paper">Paper</button>
-    <button id="Scissors">Scissors</button>
+    <div class="button-container">
+        <button id="Rock" class="gamebutton">Rock</button>
+        <button id="Paper" class="gamebutton">Paper</button>
+        <button id="Scissors" class="gamebutton">Scissors</button>
+    </div>
 
-    <div id="rounds"></div>
+        <div id="rounds"></div>
 
-    <div id="score">Score: You: 0 Computer: 0</div>
+    <div id="score-container">
+        <div id="score">Score: You: 0 Computer: 0</div>
+    </div>
 
-    <div id="finalscore"></div>
+        <div id="finalscore"></div>
     
     <script src="./game.js"></script>
 </body>
