--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="title-container">
-     <h1 class="title">Rock Paper Scissors</h1>
+    <div class="center-wrapper">
+        <div class="title-container">
+            <h1 class="title">Rock Paper Scissors</h1>
+        </div>
+
+        <button id="startGameButton" style="display: none">Start New Game</button>
+
+        <div class="button-container">
+            <button id="Rock" class="gamebutton">Rock</button>
+            <button id="Paper" class="gamebutton">Paper</button>
+            <button id="Scissors" class="gamebutton">Scissors</button>
+        </div>
+
+        <div class="score-container">
+            <div id="rounds"></div>
+        </div>
+
+        <div id="score-container">
+            <div id="your-score">You: <span>0</span></div>
+            <div id="computer-score">Computer: <span>0</span></div>
+        </div>
+        
+        <div class="score-container">
+            <div id="finalscore"></div>
+        </div>
     </div>
-
-    <button id="startGameButton" style="display: none">Start New Game</button>
-
-    <div class="button-container">
-        <button id="Rock" class="gamebutton">Rock</button>
-        <button id="Paper" class="gamebutton">Paper</button>
-        <button id="Scissors" class="gamebutton">Scissors</button>
-    </div>
-
-        <div id="rounds"></div>
-
-    <div id="score-container">
-        <div id="score">Score: You: 0 Computer: 0</div>
-    </div>
-
-        <div id="finalscore"></div>
     
     <script src="./game.js"></script>
 </body>
